--- a/src/lang/lang.csv
+++ b/src/lang/lang.csv
@@ -112,3 +112,5 @@ contact.details,Tell us about your project!,1,Parlez nous de votre projet!,0
 contact.detailsRequired,Details are required.,1,Des détails sont requis.,0
 contact.success,Successfully submitted!,1,Soumis avec succès!,0
 contact.error,An error has occurred. Please try again later.,1,Une erreur est survenue. Veuillez réessayer plus tard.,0
+toggle.ramp.three,RAMP 3,1,RAMP 3,1
+toggle.ramp.four,RAMP 4,1,RAMP 4,1
