Embed ramp4 and ramp3 into home and demo pages

--- a/src/lang/lang.csv
+++ b/src/lang/lang.csv
@@ -50,7 +50,7 @@ explainer.main.responsive.title,Responsive,1,Réactive,1
 explainer.main.title,"Engineered for Everyone, Ideal for You",1,"Conçu pour tous, idéal pour vous",1
 feature.accessibility.description,Our development team prides itself on its above-and-beyond approach to accessibility and ensuring your maps and data are welcoming and attractive to all users.,1,Notre équipe de développement est fière de son approche globale en matière d’accessibilité et veille à ce que vos cartes et vos données soient accueillantes et attrayantes pour tous les utilisateurs.,1
 feature.accessibility.imageDesc,RAMP with the accessible legend and data grid open while still showing the map data.,1,RAMP avec la légende accessible et la grille de données ouvertes tout en affichant les données cartographiques.,0
-feature.accessibility.title,"WCAG Accessible - Without the ""Clunk""",1,Accessible selon les WCAG – sans difficulté,1
+feature.accessibility.title,"WCAG Accessible",1,Accessible selon les WCAG,1
 feature.clipnship.description,Filter your geospatial data and extract customized views through the RAMP data-grid functionality.,1,Filtrez vos données géospatiales et extrayez des affichages personnalisés au moyen de la fonction Grille de données de la PCAR.,1
 feature.clipnship.title,Clip n' Ship Data Extractions,1,Extractions de données Cliquer et envoyer,1
 feature.context.description,"A suite of basemaps from Esri and Natural Resources Canada help contextualize your geospatial data, or add your own! Custom extents and shortcuts make your data easy to find and visualize.",1,"Une suite de cartes de base d’Esri et de Ressources naturelles Canada vous aide à contextualiser vos données géospatiales, ou vous pouvez ajouter les vôtres! Les extensions et raccourcis personnalisés facilitent la recherche et la visualisation de vos données.",1
@@ -117,3 +117,5 @@ contact.details,Tell us about your project!,1,Parlez nous de votre projet!,0
 contact.detailsRequired,Details are required.,1,Des détails sont requis.,0
 contact.success,Successfully submitted!,1,Soumis avec succès!,0
 contact.error,An error has occurred. Please try again later.,1,Une erreur est survenue. Veuillez réessayer plus tard.,0
+toggle.ramp.three,RAMP 3,1,PCAR 3,1
+toggle.ramp.four,RAMP 4,1,PCAR 4,1
